<!--
  Copyright 2014 Mark Lapasa
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">RFD Hot Deals Widget</string>
    <string name="no_data_available">No data available</string>
    <string name="key_edittext_smalltitle">edittext_smalltitle</string>
    <string name="small_text_default">RFD</string>
    <string name="big_text_default">Hot Deals</string>
    <string name="key_edittext_bigtitle">edittext_bigtitle</string>
    <string name="key_refresh_frequency">key_refresh_frequency</string>
    <string name="key_purge_threshold">key_purge_threshold</string>
    <string name="key_rssfeedurl">key_rssfeedurl</string>
    <string name="please_wait_">Please Wait...</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="rfd">RFD</string>
    <string name="customize_small_title">Customize Small Title</string>
    <string name="customize_big_title">Customize Big Title</string>
    <string name="summary_rss_feed_url">For this widget instance, you can specify a different RSS Feed source other than the default one</string>
    <string name="summary_small_title">Edit the small title other than the default one</string>
    <string name="summary_big_title">Edit the big title other than the default one</string>
    <string name="summary_refresh_frequency">Choose how often the RSS Feed will be automatically polled</string>
    <string name="summary_purge_threshold">Set rule of how long an item can remain saved in your local database</string>
    <string name="rfd_hot_deals_widget_is_now_ready_for_use_look_for_it_under_widgets_and_drag_it_to_your_home_screen_">Widget is now ready for use! Look for it under widgets and drag it to your home screen!</string>
    <string name="instructions_on_how_to_install">Instructions on how to install</string>
    <string name="title_activity_deal_watch">Deal Watch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_filter">Create Filter</string>
    <string name="edit_filter">Edit Filter</string>
    <string name="deal_watch">Deal Watch</string>
    <string name="checking_rss_feed">Checking RSS Feed..</string>
    <string name="sub_title">Receive Alerts When Filters Match</string>
</resources>
