<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 Mark Lapasa
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newsfeed_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/widget_margin" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/widget_header_background" >

        <TextView
            android:id="@+id/smallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-8dp"
            android:paddingBottom="0dp"
            android:paddingLeft="7dp"
            android:paddingTop="6dp"
            android:text="@string/rfd"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:paddingRight="6dp"
            android:src="@drawable/ic_action_settings" />

        <ImageButton
            android:id="@+id/dealWatchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/settings"
            android:background="@null"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_action_alarm"/>


        <ImageButton
            android:id="@+id/downloadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/dealWatchBtn"
            android:background="@null"
            android:paddingRight="3dp"
            android:src="@drawable/ic_download"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/refreshIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/dealWatchBtn"
            android:background="@null"
            android:paddingRight="3dp"
            android:src="@drawable/ic_downloading" />


        <ImageButton
            android:id="@+id/problemIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/dealWatchBtn"
            android:background="@null"
            android:paddingRight="3dp"
            android:src="@drawable/ic_download_error"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/bigText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/smallText"
            android:layout_toLeftOf="@id/refreshIndicator"
            android:ellipsize="marquee"
            android:gravity="left"
            android:maxLines="1"
            android:paddingBottom="4dp"
            android:paddingLeft="5dp"
            android:text="@string/hot_deals"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/headerShadow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/header"
        android:background="@drawable/widget_header_shadow" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/widget_header_background"
        android:gravity="right"
        android:maxLines="1"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:singleLine="true"
        android:text="@string/please_wait_"
        android:textColor="#FFFFFF"
        android:textSize="10sp" />

    <FrameLayout
        android:id="@+id/footerShadow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@id/footer"
        android:background="@drawable/widget_footer_shadow" />

    <ListView
        android:id="@+id/newsfeed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footerShadow"
        android:layout_below="@id/headerShadow"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:dividerHeight="2dp"
        android:orientation="vertical"
        android:padding="@dimen/widget_margin" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Loading feed..."
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
